# OpenGL3DGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  Camera.h  Game.cpp  Game.h  Light.h  Material.h  Mesh.h  Model.h  OBJLoader.h  OpenGL3DGame.cpp  Primitives.h  README.md  Shader.h  Texture.h  Vertex.h  libs.h
resources/: cat.mtl  fragment_core.glsl  vertex_core.glsl
